Añadido parte front para /add

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
                 <select id="categorias">
                     <option value="armarios">Armarios</option>
                     <option value="mesas">Mesas</option>
-                    <option value="sillas">Mesas</option>
+                    <option value="sillas">Sillas</option>
                 </select>
                 <input id="nombreProducto" type="text" placeholder="nombre" />
                 <input id="precioProducto" type="text" placeholder="Precio" />
