--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
 
     </header>
     <main>
+        <!--  BUSCAR PRODUCTO  -->
         <div class="formulario">
             <h3>Busca un producto</h3>
             <div class="inline">
@@ -32,6 +33,7 @@
             </div>
         </div>
 
+        <!--  AÑADIR PRODUCTO  -->
         <div class="formulario">
             <h3>Añade un producto</h3>
             <!--  <select onchange="manageChange(event)"> -->
@@ -48,13 +50,36 @@
             <div class="row">
                 <textarea id="descripcionProducto" name="textarea" rows="5" cols="50">Descripción del producto</textarea>
             </div>
-
-
-
             <button onclick="addProducto()">AÑADIR PRODUCTO</button>
-
         </div>
 
+        <!--  EDITAR PRODUCTO  -->
+        <div class="formulario">
+            <h3>Edita un producto</h3>
+            <div class="inline row">
+                <select id="categoriasEdit">
+                    <option value="armarios">Armarios</option>
+                    <option value="mesas">Mesas</option>
+                    <option value="sillas">Sillas</option>
+                </select>
+                <input id="nombreEdit" type="text" placeholder="nombre" />
+                <input id="precioEdit" type="text" placeholder="Precio" />
+                <input id="fotoEdit" type="file" placeholder="foto" />
+            </div>
+            <div class="row">
+                <textarea id="descripcionEdit" name="textarea" rows="5" cols="50">Descripción del producto</textarea>
+            </div>
+            <button onclick="editProducto()">EDITAR PRODUCTO</button>
+        </div>
+
+        <!--  ELIMINAR PRODUCTO  -->
+        <div class="formulario">
+            <h3>Elimina un producto</h3>
+            <div class="inline">
+                <input id="nombreBorrar" type="text" placeholder="nombre" />
+                <button onclick="deleteProducto()">ELIMINA PRODUCTO</button>
+            </div>
+        </div>
 
         <diV id="resultado"></diV>
     </main>
