--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
     <header>
         <h1 class="branding">IKEA</h1>
 
-        <!--        <nav class="nav-bar">
+        <nav class="nav-bar">
             <ul>
-                <li><a href="#">enlace 1</a></li>
-                <li><a href="#">enlace 2</a></li>
-                <li><A href="#">enlace 3</A></li>
+                <li><a href="./cesta.html">Cesta</a></li>
+                <!-- <li><a href="#">enlace 2</a></li>
+                <li><A href="#">enlace 3</A></li> -->
             </ul>
-        </nav> -->
+        </nav>
 
 
     </header>
@@ -45,7 +45,7 @@
                 </select>
                 <input id="nombreProducto" type="text" placeholder="nombre" />
                 <input id="precioProducto" type="text" placeholder="Precio" />
-                <input id="fotoProducto" type="file" placeholder="foto" />
+                <input id="fotoProducto" type="text" placeholder="foto" />
             </div>
             <div class="row">
                 <textarea id="descripcionProducto" name="textarea" rows="5" cols="50">Descripción del producto</textarea>
@@ -64,7 +64,7 @@
                 </select>
                 <input id="nombreEdit" type="text" placeholder="nombre" />
                 <input id="precioEdit" type="text" placeholder="Precio" />
-                <input id="fotoEdit" type="file" placeholder="foto" />
+                <input id="fotoEdit" type="text" placeholder="foto" />
             </div>
             <div class="row">
                 <textarea id="descripcionEdit" name="textarea" rows="5" cols="50">Descripción del producto</textarea>
