solo falta borrar toda la cesta

--- a/public/cesta.html
+++ b/public/cesta.html
@@ -4,13 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <title>Cesta</title>
+
 </head>
 
 <body>
-    <div id="cesta"></div>
+    <header>
+        <h1 class="branding">IKEA</h1>
+        <nav class="nav-bar">
+            <ul>
+                <li><a href="./index.html">Inicio</a></li>
+                <li class="active"><a href="#">Cesta</a>
+                    <span id="contador" class="unidades"></span>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2 class="titulo-seccion">Cesta de Productos</h2>
+        <div id="cesta"></div>
+        <button></button>
+
+    </main>
+
+
     <script src="./index.js"></script>
+
 </body>
 
 </html>
