--- a/public/cesta.html
+++ b/public/cesta.html
@@ -25,7 +25,7 @@
     <main>
         <h2 class="titulo-seccion">Cesta de Productos</h2>
         <div id="cesta"></div>
-        <button></button>
+        <button onclick="comprar()">FINALIZAR COMPRA</button>
 
     </main>
 
