Finalizar compra hecho

--- a/public/cesta.html
+++ b/public/cesta.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
                 <li class="active"><a href="#">Cesta</a>
-                    <span id="contador" class="unidades"></span>
+                    <span id="contador" class="unidades">3</span>
                 </li>
             </ul>
         </nav>
